examples/test/testpolicy6517.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6517
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key37: value36
      key36: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value28
          key25: value25
      podSelector:
        matchLabels:
          key19: value46
